Added llama3 model for answer generation